Manually revert "Fix pthread related link error for virt-aa-helper"
This reverts commit b5b8a6db69ba16a8225962bf7659b6ff6756bc18.

That commit was not necessary. The problem is fixed by commit
0e9b3a269be9ce821615aba4aece87c4451d43ac, but I didn't rebuild
it properly after pulling in the commit and didn't notice it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1016,7 +1016,7 @@ virt_aa_helper_SOURCES = $(SECURITY_DRIVER_APPARMOR_HELPER_SOURCES)
 
 virt_aa_helper_LDFLAGS = $(WARN_CFLAGS)
 virt_aa_helper_LDADD =						\
-		$(LIBXML_LIBS) $(LIB_PTHREAD)			\
+		$(LIBXML_LIBS)					\
 		libvirt_conf.la					\
 		libvirt_util.la					\
 		../gnulib/lib/libgnu.la
