--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -20,6 +20,7 @@ src/cpu/cpu_x86.c
 src/datatypes.c
 src/driver.c
 src/esx/esx_driver.c
+src/esx/esx_storage_driver.c
 src/esx/esx_util.c
 src/esx/esx_vi.c
 src/esx/esx_vi_methods.c
