--- a/include/libvirt/libvirt.h.in
+++ b/include/libvirt/libvirt.h.in
@@ -4,7 +4,7 @@
  * Description: Provides the interfaces of the libvirt library to handle
  *              virtualized domains
  *
- * Copy:  Copyright (C) 2005,2006 Red Hat, Inc.
+ * Copy:  Copyright (C) 2005,2006,2010 Red Hat, Inc.
  *
  * See COPYING.LIB for the License of this software
  *
@@ -407,6 +407,8 @@ typedef enum {
 typedef enum {
     VIR_MIGRATE_LIVE              = (1 << 0), /* live migration */
     VIR_MIGRATE_PEER2PEER         = (1 << 1), /* direct source -> dest host control channel */
+    /* Note the less-common spelling that we're stuck with:
+       VIR_MIGRATE_TUNNELLED should be VIR_MIGRATE_TUNNELED */
     VIR_MIGRATE_TUNNELLED         = (1 << 2), /* tunnel migration data over libvirtd connection */
     VIR_MIGRATE_PERSIST_DEST      = (1 << 3), /* persist the VM on the destination */
     VIR_MIGRATE_UNDEFINE_SOURCE   = (1 << 4), /* undefine the VM on the source */
