docs: distribute more coding convention documentation
These files may be useful for anyone making modifications to
source files in a tarball distribution.

* src/Makefile.am (EXTRA_DIST): Add THREADS.txt.
* daemon/Makefile.am (EXTRA_DIST): Add THREADING.txt.

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -29,6 +29,7 @@ EXTRA_DIST =						\
 	libvirtd.lxc.logrotate.in                       \
 	libvirtd.uml.logrotate.in                       \
 	test_libvirtd.aug                               \
+	THREADING.txt					\
 	$(AVAHI_SOURCES)				\
 	$(DAEMON_SOURCES)
 
