--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -63,6 +63,7 @@
 %define with_yajl          0%{!?_without_yajl:0}
 %define with_nwfilter      0%{!?_without_nwfilter:0}
 %define with_libpcap       0%{!?_without_libpcap:0}
+%define with_macvtap       0%{!?_without_macvtap:0}
 
 # Non-server/HV driver defaults which are always enabled
 %define with_python        0%{!?_without_python:1}
@@ -153,6 +154,11 @@
 %if %{with_qemu}
 %define with_nwfilter 0%{!?_without_nwfilter:%{server_drivers}}
 %define with_libpcap  0%{!?_without_libpcap:%{server_drivers}}
+%define with_macvtap  0%{!?_without_macvtap:%{server_drivers}}
+%endif
+
+%if %{with_macvtap}
+%define with_libnl 1
 %endif
 
 # Force QEMU to run as non-root
@@ -281,6 +287,9 @@ BuildRequires: yajl-devel
 %endif
 %if %{with_libpcap}
 BuildRequires: libpcap-devel
+%endif
+%if %{with_libnl}
+BuildRequires: libnl-devel
 %endif
 %if %{with_avahi}
 BuildRequires: avahi-devel
@@ -531,6 +540,10 @@ of recent versions of Linux (and other OSes).
 %define _without_libpcap --without-libpcap
 %endif
 
+%if ! %{with_macvtap}
+%define _without_macvtap --without-macvtap
+%endif
+
 %configure %{?_without_xen} \
            %{?_without_qemu} \
            %{?_without_openvz} \
@@ -560,6 +573,7 @@ of recent versions of Linux (and other OSes).
            %{?_without_udev} \
            %{?_without_yajl} \
            %{?_without_libpcap} \
+           %{?_without_macvtap} \
            --with-qemu-user=%{qemu_user} \
            --with-qemu-group=%{qemu_group} \
            --with-init-script=redhat \
