build: fix HTML errors in nwfilter docs
A build on Ubuntu reported:

|| Generating formatnwfilter.html.tmp
/dados/develop/libvirt/docs/formatnwfilter.html.in|390| HTML parser error : Unexpected end tag : p
||     </p>
||         ^
/dados/develop/libvirt/docs/formatnwfilter.html.in|705| HTML parser error : Unexpected end tag : code
||          <td>End of range of valid source ports</code></td>
||                                                       ^
/dados/develop/libvirt/docs/formatnwfilter.html.in|710| HTML parser error : Unexpected end tag : code
||          <td>Start of range of valid destination ports</code></td>
||                                                              ^

* docs/formatnwfilter.html.in: Fix invalid HTML constructs.
Reported by Eduardo Otubo.

--- a/docs/formatnwfilter.html.in
+++ b/docs/formatnwfilter.html.in
@@ -384,10 +384,12 @@
       </table>
     <p>
       Valid Strings for <code>protocolid</code> are: arp, rarp, ipv4, ipv6
-      <br><br>
-      Example: <pre>&lt;mac match='no' srcmacaddr='$MAC'/&gt;</pre>
-      <br><br>
     </p>
+<pre>
+[...]
+&lt;mac match='no' srcmacaddr='$MAC'/&gt;
+[...]
+</pre>
 
     <h5><a name="nwfelemsRulesProtoARP">ARP/RARP</a></h5>
     <p>
@@ -702,12 +704,12 @@
        <tr>
          <td>srcportend</td>
          <td>UINT16</td>
-         <td>End of range of valid source ports</code></td>
+         <td>End of range of valid source ports</td>
        </tr>
        <tr>
          <td>dstportstart</td>
          <td>UINT16</td>
-         <td>Start of range of valid destination ports</code></td>
+         <td>Start of range of valid destination ports</td>
        </tr>
        <tr>
          <td>dstportend</td>
