Support for VirtualBox version 3.2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -257,7 +257,8 @@ VBOX_DRIVER_SOURCES =						\
         vbox/vbox_driver.c vbox/vbox_driver.h			\
         vbox/vbox_V2_2.c vbox/vbox_CAPI_v2_2.h			\
         vbox/vbox_V3_0.c vbox/vbox_CAPI_v3_0.h			\
-        vbox/vbox_V3_1.c vbox/vbox_CAPI_v3_1.h
+        vbox/vbox_V3_1.c vbox/vbox_CAPI_v3_1.h			\
+        vbox/vbox_V3_2.c vbox/vbox_CAPI_v3_2.h
 
 VBOX_DRIVER_EXTRA_DIST = vbox/vbox_tmpl.c vbox/README
 
