--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -658,7 +658,7 @@ cd tests
 for i in nodeinfotest daemon-conf seclabeltest
 do
   rm -f $i
-  echo -e "#!/bin/sh\nexit 0" > $i
+  printf "#!/bin/sh\nexit 0\n" > $i
   chmod +x $i
 done
 make check
