build: support 'make check' in pristine tree
Otherwise, 'make check' in the python dir tries to reference a file in
docs that is built by 'make' but not by 'make check'.

* docs/Makefile.am (check-local): New rule.
Reported by Matthias Bolte.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -143,6 +143,8 @@ html/%-%.html html/%-virterror.html %-api.xml %-refs.xml: \
 		$(srcdir)/../src/%.c \
 		$(srcdir)/../src/util/virterror.c
 
+check-local: all
+
 clean-local:
 	rm -f *~ *.bak *.hierarchy *.signals *-unused.txt
 
